--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,18 @@
       "target": "ES2020",
       "module": "CommonJS",
       "lib": ["ES2020"],
+      "types": ["node"],
       "rootDir": "./",
       "outDir": "dist",
       "moduleResolution": "node",
       "esModuleInterop": true,
+      "allowSyntheticDefaultImports": true,
       "resolveJsonModule": true,
       "strict": true,
       "skipLibCheck": true,
-      "forceConsistentCasingInFileNames": true
+      "forceConsistentCasingInFileNames": true,
+      "experimentalDecorators": true,
+      "emitDecoratorMetadata": true
     },
     "exclude": ["node_modules", "dist"]
   }
