--- a/package.json
+++ b/package.json
@@ -8,15 +8,23 @@
   },
   "files": [
     "dist",
+    "tests",
     "README.md",
-    "LICENSE"
+    "LICENSE",
+    "jest.config.js"
   ],
   "scripts": {
     "build": "tsc",
     "start": "ts-node bin/index.ts",
     "dev": "ts-node bin/index.ts",
     "prepare": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run test:simple && npm run test:integration",
+    "test:simple": "ts-node tests/simple.test.ts",
+    "test:integration": "ts-node tests/run-tests.ts",
+    "test:jest": "jest --config jest.config.js",
+    "test:watch": "jest --config jest.config.js --watch",
+    "test:coverage": "jest --config jest.config.js --coverage",
+    "test:ci": "jest --config jest.config.js --ci --coverage --watchAll=false"
   },
   "engines": {
     "node": ">=16.0.0"
@@ -27,8 +35,13 @@
     "yargs": "^17.7.2"
   },
   "devDependencies": {
+    "@nestjs/common": "^10.4.19",
+    "@nestjs/testing": "^10.4.19",
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.19.0",
     "@types/yargs": "^17.0.33",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.0"
   },
