--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
       "target": "ES2020",
       "module": "CommonJS",
       "lib": ["ES2020"],
-      "types": ["node"],
+      "types": ["node", "jest"],
       "rootDir": "./",
       "outDir": "dist",
       "moduleResolution": "node",
@@ -15,7 +15,7 @@
       "forceConsistentCasingInFileNames": true,
       "experimentalDecorators": true,
       "emitDecoratorMetadata": true
-    },
-    "exclude": ["node_modules", "dist"]
+      },
+  "exclude": ["node_modules", "dist"]
   }
   
