--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
       "target": "ES2020",
       "module": "CommonJS",
       "lib": ["ES2020"],
-      "types": ["node", "jest"],
+      "types": ["node"],
       "rootDir": "./",
       "outDir": "dist",
       "moduleResolution": "node",
@@ -16,6 +16,6 @@
       "experimentalDecorators": true,
       "emitDecoratorMetadata": true
       },
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "tests"]
   }
   
