--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nestjs-routes",
-  "version": "0.1.1",
-  "description": "CLI tool to inspect and list routes in a NestJS project",
+  "version": "0.2.0",
+  "description": "CLI tool to inspect and list routes in a NestJS project using static analysis",
   "main": "dist/src/route-scanner.js",
   "bin": {
     "nestjs-routes": "./dist/bin/index.js"
@@ -31,11 +31,11 @@
   },
   "dependencies": {
     "@nestjs/core": "^10.0.0",
+    "@nestjs/common": "^10.4.19",
     "reflect-metadata": "^0.1.14",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "@nestjs/common": "^10.4.19",
     "@nestjs/testing": "^10.4.19",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.19.0",
